# mewgenics-savegame-manager

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  deploy.yml  release.yml
docs/superpowers/plans/: 2026-06-11-mewgenics-savegame-manager.md
docs/superpowers/specs/: 2026-06-11-mewgenics-savegame-manager-design.md  2026-06-11-tauri-pivot-design.md
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/backups/: gameBackups.ts  ownBackups.ts
src/fs/: directory.ts  files.ts
src/save/: adventure.ts  cats.ts  db.ts  diff.ts  properties.ts  summary.ts
src/ui/: backupsView.ts  catsView.ts  dashboard.ts  escape.ts  state.ts
tests/: adventure.test.ts  cats.test.ts  db.test.ts  diff.test.ts  escape.test.ts  gameBackups.test.ts  ownBackups.test.ts  properties.test.ts  summary.test.ts
tests/helpers/: buildFixture.ts
