[package]
name = "mewgenics-savegame-manager"
version = "0.1.0"
description = "Mewgenics savegame manager"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[lib]
name = "mewgenics_savegame_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
